# USDHydraCapture

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  render_pao_hdrobot.ps1  render_pao_hdrobot.sh
config/datasets/: ubuntu.json  unit_test.json  unit_test_usd.json  windows.json
config/plugins/hdRobot/: aovs.json  plugin.json
config/plugins/hdStorm/: plugin.json
config/test/: ubunutu.json  windows.json
src/: README.zh.md  aov_output.cpp  aov_output.h  hydra_capture.cpp  options.cpp  options.h  renderer_config.cpp  renderer_config.h  renderer_settings.cpp  renderer_settings.h
tests/: test_cli_config_paths.cpp  test_hydra_batch.py
tools/: __init__.py
tools/hydra_batch/: __init__.py  comparison.py  runner.py  test_config.py  workflow.py
